[package]
name = "rpi-keypulse"
version = "0.1.0"
edition = "2024"

[features]
gpio = [ ]

[dependencies]
clap = { version = "4.5.42", features = [ "derive" ] }
evdev = { version = "0.13.1", features = [ "tokio" ] }
rppal = { version = "0.22.1" }
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7.16", features = [ "rt" ] }
