[package]
name = "rpi-keypulse"
version = "0.1.0"
edition = "2024"

[features]
default = [ "gpio" ]
gpio = [ ]

[dependencies]
clap = { version = "4.5.49", features = [ "derive" ] }
evdev = { version = "0.13.2", features = [ "stream-trait", "tokio" ] }
inotify = { version = "0.11.0" }
rppal = { version = "0.22.1" }
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.16", features = [ "rt" ] }
